--- a/css/index.scss
+++ b/css/index.scss
@@ -50,6 +50,9 @@ html,body{height: 100%;}
 	input {padding: 7px 25px 7px 9px !important; }
 }
 
+.hide{ display: none; }
+
+
 body{
 	margin: 0 auto;
 	padding: 0;
@@ -145,7 +148,7 @@ body{
 						display: block;
 						width: 20px;
 						height: 24px;
-						background: #486A0F;
+						background: rgb(117, 167, 34);
 						pointer-events: none;
 					}
 
@@ -306,21 +309,31 @@ body{
 					:-ms-input-placeholder { /* Internet Explorer 10+ */
 					    color:    #fff;
 					}
-										form{
+					
+					form{
+						width: auto;
+						height: 38px;
+						margin: 0;
+
 						label{
 							width: 200px;
 							float: left;
 							height: auto;
 							margin: 4px 15px 0 0;
+							
+							&.input{
+								margin: 0;
+								width: 254px;
+							}
 
 							select{
 								padding-top: 0;
 								float: left;
 								width: 200px;
-								background: #486A0F;
+								background: rgb(117, 167, 34);
 								color: #fff;
 							}
-
+			
 
 						}
 
@@ -335,7 +348,7 @@ body{
 							-webkit-border-radius: 3px;
 							-moz-border-radius: 3px;
 							border-radius: 3px;
-							background: #486A0F;
+							background: rgb(117, 167, 34);
 							color: #fff;
 							
 						}
@@ -347,6 +360,53 @@ body{
 							@include opacityCB(4);
 						}
 					}
+					
+					.countOfertas{
+						width: auto;
+						// max-width: 70px;
+						padding: 5px 8px 5px 5px;
+						background: rgba(0,0,0,0.3);
+						float: left;
+						-webkit-border-radius: 4px;
+						-moz-border-radius: 4px;
+						border-radius: 4px;
+						height: 23px;
+						margin-top: 3px;
+						margin-left: -15px;
+
+						-webkit-transition: opacity 0.4s ease-in-out;
+						-moz-transition: opacity 0.4s ease-in-out;
+						-ms-transition: opacity 0.4s ease-in-out;
+						-o-transition: opacity 0.4s ease-in-out;
+
+						&.op0{ @include opacityCB(0); }
+						
+						span{
+							width: auto;
+							height: auto;
+							position: relative;
+							top: -14px;
+							left: 3px;
+							color: #fff;
+						}
+						
+
+						&:before{
+							width: 0;
+							height: 0;
+							display: block;
+							border-width: 8px;
+							border-color: transparent rgba(0,0,0,0.3) transparent transparent;
+							border-style: solid;
+							top: 4px;
+							left: -21px;
+							content: "";
+							position: relative;
+
+						}
+						
+					}
+
 				}
 			}
 
@@ -942,7 +1002,6 @@ body{
 						position: relative;
 						*{text-decoration: none;}
 
-						&.hide{ display: none; }
 						&:hover{ text-decoration: none;	}
 						
 
