--- a/css/index.scss
+++ b/css/index.scss
@@ -48,6 +48,8 @@ html,body{height: 100%;}
 
 	select { padding-top: 5px !important; } 
 	input {padding: 7px 25px 7px 9px !important; }
+
+	
 }
 
 .hide{ display: none; }
@@ -95,6 +97,112 @@ body{
 		background: url(../images/ajax-loader.gif) center center no-repeat transparent;
 		background-color: none;
 
+	}
+
+	.countFilter{
+		background-color: #49afcd;
+		background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
+		background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
+		background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
+		background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
+		background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
+		background-repeat: repeat-x;
+		border-color: #2f96b4 #2f96b4 #1f6377;
+		border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2f96b4', GradientType=0);
+		filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+		width: 100%;
+		height: 0;	
+		position: fixed;
+		display: block;
+		z-index: 2000;
+		-webkit-box-shadow: 0 0 10px #000;
+		-moz-box-shadow: 0 0 10px #000;
+		box-shadow: 0 0 10px #000;
+		-webkit-transition: height 0.4s ease-in-out;
+		transition: height 0.4s ease-in-out;
+		color: #fff;
+		text-align: center;
+		font-size: 16px;
+		overflow: hidden;
+
+
+
+		&.show{
+			height: 25px;
+			
+			&.danger{
+				background-color: #da4f49;
+				background-image: -moz-linear-gradient(top, #ee5f5b, #bd362f);
+				background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ee5f5b), to(#bd362f));
+				background-image: -webkit-linear-gradient(top, #ee5f5b, #bd362f);
+				background-image: -o-linear-gradient(top, #ee5f5b, #bd362f);
+				background-image: linear-gradient(to bottom, #ee5f5b, #bd362f);
+				background-repeat: repeat-x;
+				border-color: #bd362f #bd362f #802420;
+				border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+				filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffee5f5b', endColorstr='#ffbd362f', GradientType=0);
+				filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+
+			}
+		}
+		
+
+		.limpar{
+			border: 0;
+			background: rgba(0, 0, 0, .2);
+			color: #fff;
+			font-size: 11px;
+			padding: 0 7px 0 0;
+			position: relative;
+			height: 20px;
+			-webkit-border-radius: 0 2px 2px 0;
+			-moz-border-radius: 0 2px 2px 0;
+			border-radius: 0 2px 2px 0;
+			position: relative;
+			right: -15px;
+			
+			.inner{
+				width: 60px;
+				float: left;
+				position: relative;
+				height: 20px;
+				top: -20px;
+
+				h6{
+					float: left;
+					padding: 0;
+					margin: 0;
+					text-align: left;
+					width: 40px;
+					margin-left: 6px;
+
+				}
+
+				i{
+					position: relative;
+					float: left;
+					width: 13px;
+					height: 13px;
+					margin-top: 3px;
+				}
+			}
+
+			&:before{
+				width: 0;
+				height: 0;
+				border-color: transparent rgba(0, 0, 0, .2) transparent transparent;
+				position: relative;
+				content: "";
+				display: block;
+				left: -20px;
+				top: 0px;
+				border-width: 10px;
+				border-style: solid;
+
+				
+			}
+		}
 	}
 
 	#all{
@@ -196,6 +304,8 @@ body{
 			height: 100%;
 			margin: 0 auto -150px; /* the bottom margin is the negative value of the footer's height */
 
+
+
 			#header{
 				width: 100%;
 				height: 80px;
@@ -203,7 +313,7 @@ body{
 				border-bottom: 3px solid #232323;
 				display: block;
 				position: fixed;
-				z-index: 100000;
+				z-index: 100;
 
 				#logo{
 					background: url(../images/marca.png) no-repeat;
@@ -358,54 +468,54 @@ body{
 							left: -36px;
 							top: 9px;
 							@include opacityCB(4);
+							cursor: auto;
 						}
 					}
 					
-					.countOfertas{
-						width: auto;
-						// max-width: 70px;
-						padding: 5px 8px 5px 5px;
-						background: rgba(0,0,0,0.3);
-						float: left;
-						-webkit-border-radius: 4px;
-						-moz-border-radius: 4px;
-						border-radius: 4px;
-						height: 23px;
-						margin-top: 3px;
-						margin-left: -15px;
+					// .countOfertas{
+					// 	width: auto;
+					// 	padding: 5px 8px 5px 5px;
+					// 	background: rgba(0,0,0,0.3);
+					// 	float: right;
+					// 	-webkit-border-radius: 4px;
+					// 	-moz-border-radius: 4px;
+					// 	border-radius: 4px;
+					// 	height: 23px;
+					// 	position: relative;
+					// 	right: 0;
+					// 	top: -31px;
+					// 	-webkit-transition: opacity 0.4s ease-in-out;
+					// 	-moz-transition: opacity 0.4s ease-in-out;
+					// 	-ms-transition: opacity 0.4s ease-in-out;
+					// 	-o-transition: opacity 0.4s ease-in-out;
 
-						-webkit-transition: opacity 0.4s ease-in-out;
-						-moz-transition: opacity 0.4s ease-in-out;
-						-ms-transition: opacity 0.4s ease-in-out;
-						-o-transition: opacity 0.4s ease-in-out;
-
-						&.op0{ @include opacityCB(0); }
+					// 	&.op0{ @include opacityCB(0); }
 						
-						span{
-							width: auto;
-							height: auto;
-							position: relative;
-							top: -14px;
-							left: 3px;
-							color: #fff;
-						}
+					// 	span{
+					// 		width: auto;
+					// 		height: auto;
+					// 		position: relative;
+					// 		top: -14px;
+					// 		left: 3px;
+					// 		color: #fff;
+					// 	}
 						
 
-						&:before{
-							width: 0;
-							height: 0;
-							display: block;
-							border-width: 8px;
-							border-color: transparent rgba(0,0,0,0.3) transparent transparent;
-							border-style: solid;
-							top: 4px;
-							left: -21px;
-							content: "";
-							position: relative;
+					// 	&:before{
+					// 		width: 0;
+					// 		height: 0;
+					// 		display: block;
+					// 		border-width: 8px;
+					// 		border-color: transparent rgba(0,0,0,0.3) transparent transparent;
+					// 		border-style: solid;
+					// 		top: 4px;
+					// 		left: -21px;
+					// 		content: "";
+					// 		position: relative;
 
-						}
+					// 	}
 						
-					}
+					// }
 
 				}
 			}
