--- a/css/index.scss
+++ b/css/index.scss
@@ -776,7 +776,7 @@ body{
 						height: 285px;
 
 
-						h3{
+						h3 > a{
 							color: #6d6d6d;
 							text-shadow: 1px 1px 1px #fff;
 							margin-bottom: 13px;
@@ -936,10 +936,45 @@ body{
 					padding-bottom: 40px;
 
 					.imgOferta{
-						max-width: 450px;
+						max-width: 440px;
 						float: left;
 						height: auto;
 						max-height: 450px;
+						padding: 5px;
+						background:#fff;
+						-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+						-moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+						box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+						
+
+						&:before, &:after {
+							position: absolute;
+							width: 40%;
+							height: 10px;
+							content: ' ';
+							left: 12px;
+							bottom: 12px;
+							background: transparent;
+							-webkit-transform: skew(-5deg) rotate(-5deg);
+							-moz-transform: skew(-5deg) rotate(-5deg);
+							-ms-transform: skew(-5deg) rotate(-5deg);
+							-o-transform: skew(-5deg) rotate(-5deg);
+							transform: skew(-5deg) rotate(-5deg);
+							-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+							-moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+							box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+							z-index: -1;
+						}
+						&:after
+						{
+							left: auto;
+							right: 12px;
+							-webkit-transform: skew(5deg) rotate(5deg);
+							-moz-transform: skew(5deg) rotate(5deg);
+							-ms-transform: skew(5deg) rotate(5deg);
+							-o-transform: skew(5deg) rotate(5deg);
+							transform: skew(5deg) rotate(5deg);
+						}
 					}
 
 					#infoOferta{
